BaSP-W03-2022: main-title section styled

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/header.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <title>
             Trackgenix - Hours Tracker
         </title>
@@ -72,10 +74,10 @@
                 <div>
                     <span class="text-bold">
                         Trackgenix
-                    </span> 
+                    </span>
                     by GigaTech Software Solutions SA
                 </div>
-                <span id="header-icons" class="social-media-icons">
+                <div class="social-media-icons">
                     <a href="https://facebook.com/">
                         <i class="fa fa-facebook-square"></i>
                     </a>
@@ -91,13 +93,12 @@
                     <a href="https://linkedin.com/">
                         <i class="fa fa-linkedin-square"></i>
                     </a>
-                </span>
+                </div>
             </header>
             <main>
                 <section id="main-title">
-                    <div>
                         <h1>
-                            <span>Hi, I’m Trackgenix </span> 
+                            <span>Hi, I’m Trackgenix </span>
                             by GigaTech Software Solutions SA
                         </h1>
                         <p class="subheader">
@@ -108,7 +109,6 @@
                             each project and work team.
                         </p>
                         <button class="button">Learn more</button>
-                    </div>
                     <img src="assets/computer.png" alt="a person using a computer">
                 </section>
                 <section id="reasons">
@@ -299,7 +299,7 @@
                                 tortor a lacus dignissim ullamcorper. Vestibulum pellentesque non neque eu facilisis. Aliquam
                                 viverra efficitur egestas. Mauris consequat nec turpis vel vestibulum. Morbi bibendum ac dui ut
                                 pulvinar. Proin convallis arcu purus, a tristique purus euismod vel. Nunc auctor massa arcu, vel
-                                commodo libero sagittis et. 
+                                commodo libero sagittis et.
                             </p>
                             <img src="assets/light-bulb.png" alt="hands holding a light bulb">
                             <p> Fusce turpis mauris, mattis eget sem a, ullamcorper mattis mi. Class
