BaSP-W03-2022: our-history section styled

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/header.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/footer.css">
         <title>
             Trackgenix - Hours Tracker
         </title>
@@ -289,16 +290,17 @@
                             Something else
                         </h3>
                         <div>
-                            <img src="assets/tablet.png" alt="people reading a tablet">
                             <p>
+                                <img src="assets/tablet.png" alt="people reading a tablet">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus lorem nibh. Donec faucibus
                                 tortor a lacus dignissim ullamcorper. Vestibulum pellentesque non neque eu facilisis. Aliquam
                                 viverra efficitur egestas. Mauris consequat nec turpis vel vestibulum. Morbi bibendum ac dui ut
                                 pulvinar. Proin convallis arcu purus, a tristique purus euismod vel. Nunc auctor massa arcu, vel
                                 commodo libero sagittis et.
                             </p>
-                            <img src="assets/light-bulb.png" alt="hands holding a light bulb">
-                            <p> Fusce turpis mauris, mattis eget sem a, ullamcorper mattis mi. Class
+                            <p>
+                                <img src="assets/light-bulb.png" alt="hands holding a light bulb">
+                                Fusce turpis mauris, mattis eget sem a, ullamcorper mattis mi. Class
                                 aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus ut
                                 rhoncus tortor, non mattis augue. Fusce lorem magna, lacinia sed eros at, tincidunt tristique nulla.
                                 Pellentesque blandit diam in mauris luctus, ut ornare sem pellentesque. Vestibulum in mollis enim.
