BaSP-W03-2022: fix flexbox usage

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -98,6 +98,7 @@
             </header>
             <main>
                 <section id="main-title">
+                    <div>
                         <h1>
                             <span>Hi, I’m Trackgenix </span>
                             by GigaTech Software Solutions SA
@@ -110,31 +111,35 @@
                             each project and work team.
                         </p>
                         <button class="button">Learn more</button>
-                    <img src="assets/computer.png" alt="a person using a computer">
+                    </div>
+                    <span>
+                        <img src="assets/computer.png" alt="a person using a computer">
+                    </span>
                 </section>
                 <section id="reasons">
                     <h2>
                         Why you should use me
                     </h2>
-                    <article>
-                        <img src="assets/cube.png" alt="cube">
-                        <div>
-                            <h3>
-                                Productivity booster
-                            </h3>
-                            <p>
-                                Explanation here of the correspondent reason. We left this with a random text for the moment.
-                                This is just an example. Don't take this text seriously
-                            </p>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="assets/stack.png" alt="a stack">
-                        <div>
-                            <h3>
-                                Work traceability
-                            </h3>
-                            <p>
+                    <div>
+                        <article>
+                            <img src="assets/cube.png" alt="cube">
+                            <div>
+                                <h3>
+                                    Productivity booster
+                                </h3>
+                                <p>
+                                    Explanation here of the correspondent reason. We left this with a random text for the moment.
+                                    This is just an example. Don't take this text seriously
+                                </p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="assets/stack.png" alt="a stack">
+                            <div>
+                                <h3>
+                                    Work traceability
+                                </h3>
+                                <p>
                                 Explanation here of the correspondent reason. We left this with a random text for the moment. This
                                 is just an example. Don't take this text seriously
                             </p>
@@ -164,36 +169,38 @@
                             </p>
                         </div>
                     </article>
+                </div>
                 </section>
                 <section id="features">
                     <h2>
                         Features
                     </h2>
-                    <article>
-                        <img src="assets/clock.png" alt="clock">
-                        <h3>
-                            Hours Log
-                        </h3>
-                        <p>
-                            Explanation here of the correspondent feature. We left this with a random text for the moment. This
-                            is just an example. Don't take this text seriously
-                        </p>
-                        <button class="button">
-                            MORE
-                        </button>
-                    </article>
-                    <article>
-                        <img src="assets/books.png" alt="books">
-                        <h3>
-                            Reports
-                        </h3>
-                        <p>
-                            Explanation here of the correspondent feature. We left this with a random text for the moment. This
-                            is just an example. Don't take this text seriously
-                        </p>
-                        <button class="button">
-                            MORE
-                        </button>
+                    <div>
+                        <article>
+                            <img src="assets/clock.png" alt="clock">
+                            <h3>
+                                Hours Log
+                            </h3>
+                            <p>
+                                Explanation here of the correspondent feature. We left this with a random text for the moment. This
+                                is just an example. Don't take this text seriously
+                            </p>
+                            <button class="button">
+                                MORE
+                            </button>
+                        </article>
+                        <article>
+                            <img src="assets/books.png" alt="books">
+                            <h3>
+                                Reports
+                            </h3>
+                            <p>
+                                Explanation here of the correspondent feature. We left this with a random text for the moment. This
+                                is just an example. Don't take this text seriously
+                            </p>
+                            <button class="button">
+                                MORE
+                            </button>
                     </article>
                     <article>
                         <img src="assets/board.png" alt="board">
@@ -221,6 +228,7 @@
                             MORE
                         </button>
                     </article>
+                </div>
                 </section>
                 <section id="contact-form">
                     <h2>
@@ -291,7 +299,9 @@
                         </h3>
                         <div>
                             <p>
-                                <img src="assets/tablet.png" alt="people reading a tablet">
+                                <span class="wrap-img">
+                                    <img src="assets/tablet.png" alt="people reading a tablet">
+                                </span>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus lorem nibh. Donec faucibus
                                 tortor a lacus dignissim ullamcorper. Vestibulum pellentesque non neque eu facilisis. Aliquam
                                 viverra efficitur egestas. Mauris consequat nec turpis vel vestibulum. Morbi bibendum ac dui ut
@@ -299,7 +309,9 @@
                                 commodo libero sagittis et.
                             </p>
                             <p>
-                                <img src="assets/light-bulb.png" alt="hands holding a light bulb">
+                                <span class="wrap-img">
+                                    <img src="assets/light-bulb.png" alt="hands holding a light bulb">
+                                </span>
                                 Fusce turpis mauris, mattis eget sem a, ullamcorper mattis mi. Class
                                 aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus ut
                                 rhoncus tortor, non mattis augue. Fusce lorem magna, lacinia sed eros at, tincidunt tristique nulla.
