BaSP-W03-2022: add menu button

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -72,11 +72,10 @@
         </aside>
         <div id="main-container">
             <header>
-                <div>
-                    <span class="text-bold">
-                        Trackgenix
-                    </span>
-                    by GigaTech Software Solutions SA
+                <div class="sticky-menu">
+                    <a href="#">
+                        <i class="fa fa-bars"></i>
+                    </a>
                 </div>
                 <div class="social-media-icons">
                     <a href="https://facebook.com/">
@@ -94,6 +93,12 @@
                     <a href="https://linkedin.com/">
                         <i class="fa fa-linkedin-square"></i>
                     </a>
+                </div>
+                <div>
+                    <span class="text-bold">
+                        Trackgenix
+                    </span>
+                    by GigaTech Software Solutions SA
                 </div>
             </header>
             <main>
