BaSP-W03-2022: add media quieries for desktop

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -9,63 +9,66 @@
         <link rel="stylesheet" type="text/css" href="css/header.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="stylesheet" type="text/css" href="css/footer.css">
+        <link rel="stylesheet" type="text/css" href="css/sidebar.css">
         <title>
             Trackgenix - Hours Tracker
         </title>
     </head>
     <body>
         <aside>
-            <div>
-                <h2>
-                    Menu
-                </h2>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#">Sign Up</a>
-                        </li>
-                        <li>
-                            <a href="#">Log In</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div id="aside-contact">
-                <h2>
-                    Get In Touch
-                </h2>
-                <p>
-                    Explanation here of the correspondent component. We left this with a random text for the moment.
-                    This is just an example. Don't take this text seriously. Explanation here of the correspondent
-                    component. We left this with a random text for the moment. This is just an example. Don't take
-                    this text seriously.
-                </p>
-                <div id="aside-contact-info">
-                    <div>
-                        <a href="mailto:#">
-                            <i class="fa fa-envelope"></i>
-                            infotrackgenix@something.idk
-                        </a>
-                    </div>
-                    <div>
-                        <i class="fa fa-home"></i>
+            <div class="aside-container">
+                <div>
+                    <p class="aside-title">
+                        Menu
+                    </p>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">Sign Up</a>
+                            </li>
+                            <li>
+                                <a href="#">Log In</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div id="aside-contact">
+                    <p class="aside-title">
+                        Get In Touch
+                    </p>
+                    <p>
+                        Explanation here of the correspondent component. We left this with a random text for the moment.
+                        This is just an example. Don't take this text seriously. Explanation here of the correspondent
+                        component. We left this with a random text for the moment. This is just an example. Don't take
+                        this text seriously.
+                    </p>
+                    <div id="aside-contact-info">
                         <div>
-                            <p>
-                                1234 Somewhere Road #8254
-                            </p>
-                            <p>
-                                Nashville, TN 00000-0000
-                            </p>
+                            <a href="mailto:#">
+                                <i class="fa fa-envelope"></i>
+                                infotrackgenix@something.idk
+                            </a>
                         </div>
-                    </div>
-                    <div>
-                        <a href="tel:+00">
-                            <i class="fa fa-phone"></i>
-                            (000) 000-0000
-                        </a>
+                        <div>
+                            <i class="fa fa-home"></i>
+                            <div>
+                                <p>
+                                    1234 Somewhere Road #8254
+                                </p>
+                                <p>
+                                    Nashville, TN 00000-0000
+                                </p>
+                            </div>
+                        </div>
+                        <div>
+                            <a href="tel:+00">
+                                <i class="fa fa-phone"></i>
+                                (000) 000-0000
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
