BaSP-W03-2022: fix meta viewport

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A job hours tracker">
         <meta name="keywords" content="tracker, trackgenix, gigatech, software, software solutions, enterprise solutions">
         <link rel="stylesheet" type="text/css" href="css/reset.css">
